add generation of test case feature

--- a/package.json
+++ b/package.json
@@ -51,7 +51,12 @@
         "command": "gemini-code-companion.gen-code",
         "category": "GeminiCodeCompanion",
         "title": "Generate Code"
-      }
+      },
+      {
+        "command": "gemini-code-companion.gen-test",
+        "category": "GeminiCodeCompanion",
+        "title": "Generate Test Case"
+      } 
     ],
     "menus": {
       "editor/context": [
@@ -62,6 +67,11 @@
         },
         {
           "command": "gemini-code-companion.explain",
+          "when": "editorTextFocus && editorHasSelection",
+          "group": "code"
+        },
+        {
+          "command": "gemini-code-companion.gen-test",
           "when": "editorTextFocus && editorHasSelection",
           "group": "code"
         }
@@ -78,6 +88,12 @@
         "command": "gemini-code-companion.explain",
         "key": "ctrl+shift+e",
         "mac": "cmd+shift+e",
+        "when": "editorTextFocus && editorHasSelection"
+      },
+      {
+        "command": "gemini-code-companion.gen-test",
+        "key": "ctrl+shift+t",
+        "mac": "cmd+shift+t",
         "when": "editorTextFocus && editorHasSelection"
       }
     ],
@@ -98,8 +114,13 @@
           },
           "gemini-code-companion.streaming": {
             "type": "boolean",
-            "default": false,
+            "default": "true",
             "description": "generate code in streaming mode"
+          },
+          "gemini-code-companion.test-folder": {
+            "type": "string",
+            "default": "test",
+            "description": "Relative test folder to the project folder. Used to save test file"
           }
         }
       }
